# projetoFullstack

backend/: pyproject.toml
backend/myserver/: settings.py  urls.py
backend/user/: urls.py
backend/user/migrations/: 0001_initial.py  0002_delete_user.py  0002_post_comment.py  0003_alter_post_slug.py  0003_initial.py  0004_alter_post_author.py  0004_user_groups_user_is_superuser_user_last_login_and_more.py
backend/user/models/: __init__.py  factories.py  models.py  post__models.py
backend/user/serializers/: __init__.py  post__serializers.py  serializers.py  user__serializers.py
backend/user/viewsets/: post_viewset.py  user_viewset.py
frontend/: .editorconfig  eslint.config.js  eslint.config.mjs  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  routes.tsx  store.ts  styles.ts
frontend/src/Pages/Home/: home.tsx  styles.ts
frontend/src/Pages/Login/: login.tsx  styles.ts
frontend/src/components/Cadastro/: cadastro.tsx  styles.ts
frontend/src/components/Home/: home.tsx  styles.ts
frontend/src/components/Login/: login.tsx  styles.ts
frontend/src/components/Profile/: Profile.tsx  styles.ts
frontend/src/components/Sidebar/: Sidebar.tsx  styles.ts
frontend/src/components/Timeline/: Timeline.tsx  styles.ts
frontend/src/contexts/: auth.tsx
frontend/src/service/: api.ts
