[project]
name = "myserver"
version = "0.1.0"
description = ""
authors = [
    {name = "EduOliveira29",email = "realmadri123@yahoo.com.br"}
]
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.6,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
